# OK-Agents

./: .gitignore  .pre-commit-config.yaml  README.md  create-graph-rag.ipynb  milvus_demo.db  pyproject.toml  running_graph_rag.ipynb
config/: config.py
okagents/agents/: __init__.py  chat_agent.py  kg_agent.py  milvus_agent.py  notes_agent.py
okagents/llms/: deepseek.py
okagents/utils/: jsonl.py
recipe/: test_kg_agent.ipynb  test_note_agent.ipynb
tests/agents/: test_kg_agent.py  test_milvus_agent.py
